# blobtastic

./: .gitignore  CMakeLists.txt  Doxyfile
include/: basic_detector.hpp  blob.hpp  blobtastic.h  blobtastic.hpp  camera.h  camera.hpp  camera_format.hpp  camera_p.hpp  channel.hpp  detector.hpp  image.hpp
src/: basic_detector.cpp  blob.cpp  build_options.hpp  camera.cpp  camera_c.cpp  channel.cpp  detector.cpp  image.cpp  verbose.cpp  verbose.h
test/: CMakeLists.txt
test/general/: CMakeLists.txt  general.c
